WebAuthn Signal API PublicKeyCredential.signalAllAcceptedCredentials() never resolves rdar://161170398 https://bugs.webkit.org/show_bug.cgi?id=298951

Reviewed by Brent Fulgham.

Resolve promise for signalUnknownCredential and signalAllAcceptedCredentials whenever
there isn't an error.

* Source/WebCore/Modules/webauthn/AuthenticatorCoordinator.cpp:
(WebCore::AuthenticatorCoordinator::signalUnknownCredential):
(WebCore::AuthenticatorCoordinator::signalAllAcceptedCredentials):

Canonical link: https://commits.webkit.org/304633@main